--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -21,8 +21,8 @@ description: >- # this means to ignore newlines until "baseurl:"
         to Zenodo. DwCA's are stored into user's Google Drive and can be downloaded
         for upload into IPT installations or other software which is able to read
         DwC-archives.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "https://zedomel.github.io/dwca-gsheet-assistant/" # the subpath of your site, e.g. /blog
+url: "https://zedomel.github.io/dwca-gsheet-assistant/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 
@@ -30,7 +30,7 @@ github_username:  jekyll
 markdown: kramdown
 theme: jekyll-theme-minimal
 plugins:
-  - jekyll-feed
+        #- jekyll-feed
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
