--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -22,7 +22,7 @@ description: >- # this means to ignore newlines until "baseurl:"
         for upload into IPT installations or other software which is able to read
         DwC-archives.
 baseurl: "/dwca-gsheet-assistant" # the subpath of your site, e.g. /blog
-url: "https://zedomel.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://dwcaassistant.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 
